[tool.poetry]
name = "loadlamb"
version = "0.5.2"
description = "Load testing library built to run on AWS Lambda"
authors = ["Brian Jinwright <brian@ipoots.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.5"
beautifulsoup4 = "^4.7"
base58 = "^1.0"
boto3 = "^1.9"
chalice = "^1.8"
docb = "^1.1"
jinja2 = "^2.10"
python-slugify = "^3.0"
PyYAML = "^5.1"
requests = "^2.21"
sammy = "^0.4.3"
unipath = "^1.1"
warrant-lite = "^1.0"

[tool.poetry.dev-dependencies]
Django = "^2.2"
flask = "^1.0"
pytest = "^4.5"
pytest-asyncio = "^0.10.0"

[tool.poetry.scripts]
loadlamb = "loadlamb.chalicelib.cli:loadlamb"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"